[package]
name = "namehax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"]}
sysinfo = "0.23.5"
process_list = "0.2.1"
winapi = { version = "0.3", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi","tlhelp32"] }